--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "liising",
+  "name": "calculator",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -15,6 +15,5 @@
     "cypress": "^12.17.2",
     "ts-loader": "^9.4.2",
     "typescript": "^5.0.4",
-    "axios": "^0.25.0"
   }
 }
