--- a/package.json
+++ b/package.json
@@ -14,6 +14,6 @@
     "@cypress/webpack-preprocessor": "^5.17.0",
     "cypress": "^12.17.2",
     "ts-loader": "^9.4.2",
-    "typescript": "^5.0.4",
+    "typescript": "^5.0.4"
   }
 }
